@@ -23,7 +23,7 @@ from ..utils.iconimage import WebIconImage
 
 
 def info():
-    return [HaikyoPlugin, HaikyoPhotoList, PhotoSourceUI]
+    return [HaikyoPlugin, HaikyoPhotoList, PhotoSourceHaikyoUI]
 
 
 class HaikyoPlugin(PluginBase):
@@ -74,6 +74,10 @@ class HaikyoPhotoList(PhotoList):
     def _unescape(self, text):
         return re.sub(r'\\(.)', r'\1', text) if text else text
 
+class PhotoSourceHaikyoUI(PhotoSourceUI):
+
+    def _set_target_sensitive(self, label=_('_Target:'), state=False):
+        super(PhotoSourceHaikyoUI, self)._set_target_sensitive(label, False)
 
 class HaikyoIcon(WebIconImage):
 
